# docs/swagger.yaml
@@ -292,7 +292,7 @@ paths:
         "200":
           description: Created copilot request
           schema:
-            $ref: "#/definitions/CopilotRequest"
+            $ref: "#/definitions/NewCopilotRequest"
         "401":
           description: Unauthorized
           schema:
@@ -320,6 +320,7 @@ paths:
         - Bearer: []
       description: "Retrieve a list of copilot requests."
       parameters:
+        - $ref: "#/parameters/projectIdParam"
         - name: sort
           required: false
           type: string
@@ -407,6 +408,42 @@ paths:
         required: true
         schema:
           $ref: "#/definitions/NewCopilotOpportunity"
+  "/projects/copilots/opportunities":
+    get:
+      tags:
+        - projects copilot opportunities
+      operationId: getAllCopilotOpportunities
+      security:
+        - Bearer: []
+      description: "Retrieve a list of copilot opportunities."
+      parameters:
+        - name: sort
+          required: false
+          type: string
+          enum:
+            - createdAt asc
+            - createdAt desc
+          in: query
+          description: Sorting criteria for the opportunities. Default is 'createdAt desc'.
+      responses:
+        "200":
+          description: "List of copilot opportunities"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/CopilotOpportunity"
+        "401":
+          description: "Unauthorized"
+          schema:
+            $ref: "#/definitions/ErrorModel"
+        "403":
+          description: "Forbidden - User does not have permission"
+          schema:
+            $ref: "#/definitions/ErrorModel"
+        "500":
+          description: "Internal Server Error"
+          schema:
+            $ref: "#/definitions/ErrorModel"
   "/projects/{projectId}/attachments":
     get:
       tags:
